# rules_rust

docs/: WORKSPACE.bazel  flatten.md  rust_repositories.md
rust/: toolchain.bzl
rust/private/: rust_analyzer.bzl
tools/rust_analyzer/: aquery.rs  lib.rs  main.rs
