workspace(name = "rules_rust_docs")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# Temporary hack, do not submit
http_archive(
    name = "io_tweag_rules_nixpkgs",
    sha256 = "980edfceef2e59e1122d9be6c52413bc298435f0a3d452532b8a48d7562ffd67",
    strip_prefix = "rules_nixpkgs-0.10.0",
    urls = ["https://github.com/tweag/rules_nixpkgs/releases/download/v0.10.0/rules_nixpkgs-0.10.0.tar.gz"],
)

load("@io_tweag_rules_nixpkgs//nixpkgs:repositories.bzl", "rules_nixpkgs_dependencies")

rules_nixpkgs_dependencies()

load("@io_tweag_rules_nixpkgs//nixpkgs:nixpkgs.bzl", "nixpkgs_git_repository", "nixpkgs_java_configure")

nixpkgs_git_repository(
    name = "nixpkgs",
    revision = "nixpkgs-unstable",
    # sha256 = "" # optional sha to verify package integrity!
)

nixpkgs_java_configure(
    attribute_path = "jdk11.home",
    register = True,
    repository = "@nixpkgs",
    toolchain = True,
    toolchain_name = "nixpkgs_java",
)
# end temporary hack

local_repository(
    name = "rules_rust",
    path = "..",
)

load("@rules_rust//rust:repositories.bzl", "rules_rust_dependencies", "rust_register_toolchains")

rules_rust_dependencies()

rust_register_toolchains()

load("@rules_rust//crate_universe:repositories.bzl", "crate_universe_dependencies")

crate_universe_dependencies()

load("@rules_rust//proto/prost:repositories.bzl", "rust_prost_dependencies")

rust_prost_dependencies()

load("@rules_rust//proto/prost:transitive_repositories.bzl", "rust_prost_transitive_repositories")

rust_prost_transitive_repositories()

load("@rules_rust//proto/protobuf:repositories.bzl", "rust_proto_protobuf_dependencies")

rust_proto_protobuf_dependencies()

load(
    "@rules_rust//wasm_bindgen:repositories.bzl",
    "rust_wasm_bindgen_dependencies",
    "rust_wasm_bindgen_register_toolchains",
)

rust_wasm_bindgen_dependencies()

rust_wasm_bindgen_register_toolchains()

http_archive(
    name = "io_bazel_stardoc",
    patches = [
        # Pull in https://github.com/bazelbuild/stardoc/pull/143
        "//:stardoc-attr-default-wrappers.patch",
    ],
    sha256 = "dfbc364aaec143df5e6c52faf1f1166775a5b4408243f445f44b661cfdc3134f",
    urls = [
        "https://mirror.bazel.build/github.com/bazelbuild/stardoc/releases/download/0.5.6/stardoc-0.5.6.tar.gz",
        "https://github.com/bazelbuild/stardoc/releases/download/0.5.6/stardoc-0.5.6.tar.gz",
    ],
)

load("@io_bazel_stardoc//:setup.bzl", "stardoc_repositories")

stardoc_repositories()
